<resources>
    <string name="app_name">Happle</string>
    <string name="login_welcome">합플에 오신 것을 환영합니다!</string>
    <string name="hint_username">아이디를 입력해주세요</string>
    <string name="hint_password">비밀번호를 입력해주세요</string>
    <string name="login_button">로그인</string>
    <string name="forgot_password">비밀번호 찾기</string>
    <string name="other_login_methods">간편 로그인</string>
    <string name="search_title">어떤 밴드를 찾으세요?</string>
    <string name="band1">SUMMIT</string>
    <string name="band2">어울림</string>
    <string name="band3">크림슨</string>
    <string name="band4">광야</string>
    <string name="band5">킨젝스</string>
    <string name="band6">소나기</string>
    <string name="band7">메아리</string>
    <string name="band8">수선관 그 밴드</string>
    <string name="band9">블루 드래곤</string>
    <string name="follow">팔로우</string>
</resources>
